# TSC-VEE

./: README.md
evmone/: run.sh
exp/: ins-latency.xlsx  latency.xlsx  mem-latency.xlsx  mem-usage.xlsx  memory.xlsx
exp/input/: transferfrom.txt
exp/instructions/: approve.txt  decimals.txt  symbol.txt
include/: contract.h  evm.h  hash.h  instructions.h  interpreter.h  memory.h  opcode.h  operation.h  stack.h  uint256.h
instructions/: all.txt  allowance.txt  balanceOf.txt  extract.py  name.txt  transfer.txt  transferFrom.txt  transferfrom ass.txt
latency/General/: general.sol  ins
memory/ERC20/: erc20  stack depth.xlsx
on REE/include/: analysis.h  (+4 more)
parameters/: ERC20 bytecode.txt  General bytecode.txt  exec.txt  key.txt  para-add.txt  para-balance.txt  para-transfer.txt
src/: contract.c  evm.c  instructions.c  interpreter.c  main.c  memory.c  opcode.c  operation.c  stack.c  uint256.c
tscvee/: Android.mk  CMakeLists.txt  Makefile  README.md  make.sh  run.sh
tscvee/args/: transferFrom.json
tscvee/host/: Makefile  main.c
tscvee/include/: analysis_impl.h  execution.h  execution_state.h  instructions.h  mocked_host.h  opcode.h  sha3.h  vm.h
tscvee/src/: main.c  uint256.c
tscvee/ta/: Android.mk  Makefile  sub.mk  tscvee_ta.c  user_ta_header_defines.h
tscvee/ta/include/: analysis.h  analysis_impl.h  evmc.h  execution.h  execution_state.h  instructions.h  instructions_traits.h  instructions_xmacro.h  mocked_host.h  opcode_helpers.h  sha3.h  tscvee_ta.h  uint256.h  vm.h
tscvee/ta/src/: sha3.c
tscvee/ta/stc/: ccommon.h  cmap.h  cstr.h  cvec.h
(+7 files in other folders)
